add delete page

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -39,6 +39,16 @@
                 </span>
                     </div>
                 </div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <div class="input-group">
+                        <input name="{{ name }}-delete" value="delete"  type="text" 
+                            class="form-control"
+                            placeholder="Please submit your name...">
+                        <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default" type="button">Delete</button>
+                </span>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
